--- a/studio/package.json
+++ b/studio/package.json
@@ -20,10 +20,10 @@
     "@sanity/default-layout": "^2.4.1",
     "@sanity/default-login": "^2.2.6",
     "@sanity/desk-tool": "^2.4.2",
+    "@sanity/image-url": "^0.140.22",
     "@sanity/vision": "^2.2.6",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0"
-  },
-  "devDependencies": {}
+  }
 }
